--- a/src/scss/blocks/_header-bar.scss
+++ b/src/scss/blocks/_header-bar.scss
@@ -4,20 +4,16 @@
   margin: 0 auto;
   width: 100%;
   height: 70px;
-  background-color: #080E15;
   @include flex-center-between;
   position: fixed;
   z-index: 100;
 
   &__wrapper {
-    padding: 0 40px;
-    @include flex-center-between;
+    padding: 0 20px;
+    @include flex-center;
+    justify-content: flex-end;
     width: 100%;
     z-index: 100;
-  }
-
-  &__logo {
-    cursor: pointer;
   }
 }
 
@@ -28,12 +24,12 @@
   &__wrapper {
     @include flex-center-between;
     flex-direction: column;
-    width: 20px;
-    height: 13px;
+    width: 23px;
+    height: 18px;
     z-index: 100;
 
     span {
-      height: 0.5px;
+      border: 1px solid $white-gray;
       width: 100%;
       background-color: white;
       transition: transform ease-in-out 0.1s;
