feat!: added optimization layout

--- a/src/scss/blocks/_header-bar.scss
+++ b/src/scss/blocks/_header-bar.scss
@@ -33,6 +33,7 @@
       width: 100%;
       background-color: white;
       transition: transform ease-in-out 0.1s;
+      border-radius: 4px;
     }
   }
 }
