--- a/src/scss/blocks/_header-bar.scss
+++ b/src/scss/blocks/_header-bar.scss
@@ -3,7 +3,7 @@
 .header-bar {
   margin: 0 auto;
   width: 100%;
-  height: 70px;
+  height: 40px;
   @include flex-center-between;
   position: fixed;
   z-index: 100;
@@ -17,23 +17,48 @@
   }
 }
 
-.burger {
+
+#menu__toggle {
+  opacity: 0;
+}
+#menu__toggle:checked + .menu__btn > span {
+  transform: rotate(45deg);
+}
+#menu__toggle:checked + .menu__btn > span::before {
+  top: 0;
+  transform: rotate(0deg);
+}
+#menu__toggle:checked + .menu__btn > span::after {
+  top: 0;
+  transform: rotate(90deg);
+}
+#menu__toggle:checked ~ .menu__box {
+  left: 0 !important;
+}
+.menu__btn {
+  position: fixed;
+  top: 30px;
+  right: 20px;
+  width: 26px;
+  height: 26px;
   cursor: pointer;
-  z-index: 100;
-
-  &__wrapper {
-    @include flex-center-between;
-    flex-direction: column;
-    width: 23px;
-    height: 18px;
-    z-index: 100;
-
-    span {
-      border: 1px solid $white-gray;
-      width: 100%;
-      background-color: white;
-      transition: transform ease-in-out 0.1s;
-      border-radius: 4px;
-    }
-  }
+  z-index: 1;
+}
+.menu__btn > span,
+.menu__btn > span::before,
+.menu__btn > span::after {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: #fff;
+  transition-duration: .25s;
+}
+.menu__btn > span::before {
+  content: '';
+  top: -8px;
+}
+.menu__btn > span::after {
+  content: '';
+  top: 8px;
 }
