feat!: added optimization layout

--- a/src/scss/blocks/_about.scss
+++ b/src/scss/blocks/_about.scss
@@ -50,9 +50,10 @@
     align-items: flex-start;
     gap: 100px;
     flex-wrap: wrap;
-    min-height: 600px;
+    min-height: 200px;
     padding-bottom: 100px;
     border-bottom: 1px solid $white-blue;
+    margin-top: 20px;
 
     @media screen and (max-width: 1100px) {
       gap: 20px;
@@ -89,9 +90,8 @@
       background-color: rgba(0, 0, 0, 0);
       border: none;
       cursor: pointer;
-      position: absolute;
-      bottom: -90px;
-      left: 175px;
+      position: relative;
+      bottom: 0;
 
       &_open {
         display: block;
@@ -100,28 +100,37 @@
     }
 
     &__circle {
-      animation: scroll-circle ease-in-out 3s infinite;
+      animation: scroll-circle ease-in-out 2.5s infinite;
     }
 
     @keyframes scroll-circle {
       0% {
         transform: translateY(0);
+        opacity: 0.2;
       }
+
+      20%  {
+        opacity: 1;
+      }
+
       50% {
         transform: translateY(25px);
+        opacity: 0;
       }
 
       100% {
         transform: translateY(0);
+        opacity: 0;
       }
     }
 
     &__image {
-      height: 600px;
+      height: 390px;
       animation: gravity 3s infinite ease-in-out;
 
       @media screen and (max-width: 1100px) {
-        height: 500px;
+        margin-top: -50px;
+        width: 100%;
       }
     }
 
@@ -131,7 +140,7 @@
       }
 
       50% {
-        transform: translateY(20px);
+        transform: translateY(10px);
       }
 
       100% {
@@ -235,11 +244,7 @@
     }
 
     @media screen and (max-width: 720px) {
-      padding: 100px 0 100px 0;
-    }
-
-    @media screen and (max-width: 720px) {
-      padding: 100px 0 70px 0;
+      padding: 0 0 70px 0;
     }
 
     &__wrapper {
@@ -250,6 +255,7 @@
       @media screen and (max-width: 1080px) {
         display: flex;
         flex-direction: column;
+        gap: 10px;
       }
 
 
@@ -271,7 +277,7 @@
         grid-template-columns: repeat(3, minmax(100px, 280px));
         grid-template-rows: repeat(3, minmax(140px, 220px));
         gap: 8px;
-        margin-bottom: 10px;
+        margin-bottom: 40px;
       }
 
       @media screen and (max-width: 500px) {
