--- a/src/scss/blocks/_all.scss
+++ b/src/scss/blocks/_all.scss
@@ -4,4 +4,5 @@
 @import "./footer";
 @import "./portfolio";
 @import "./header-bar";
-@import "panel-list";
+@import "./panel-list";
+@import "./work";
