--- a/src/scss/blocks/_home.scss
+++ b/src/scss/blocks/_home.scss
@@ -65,7 +65,7 @@
       @include reset-list;
       @include flex-center-between;
       gap: 12px;
-      //margin-top: 27px;
+      margin-top: 27px;
 
       li {
         transition: transform ease-in-out 0.3s;
