--- a/src/scss/blocks/_portfolio.scss
+++ b/src/scss/blocks/_portfolio.scss
@@ -40,6 +40,7 @@
   }
 
   &__preview {
+    position: relative;
     min-width: 500px;
     height: 350px;
     background-color: #080E15;
@@ -67,17 +68,24 @@
     }
   }
 
-  &__image {
-    object-fit: cover;
-    position: center;
+  &__preview-overlay {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0);
+    transition: background-color ease-in-out 0.2s;
     width: 100%;
     height: 100%;
-    transition: transform ease-in-out 0.5s;
 
     &:hover {
-      transform: scale(1.05);
+      background-color: rgba(0, 0, 0, 0.4);
     }
   }
+
+  &__image {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+  }
+
 
   &__info {
     align-self: flex-start;
